--- a/main.html
+++ b/main.html
@@ -10,6 +10,53 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<nav>
+	<a href="#actor" id="nav-actor">Actors</a>
+	<a href="#quote" id="nav-quote">Quotes</a>
+</nav>
+<header>
+	<h1>Drishyam 2</h1>
+</header>
+<div>
+	<summary>Summary</summary>
+	<p>Drishyam 2 is the movie of miind games and so much of drama,and full of enjoyment,
+		Jeethu wrote the script for Drishyam 2 when the production works of his another film Ram, 
+		got interrupted due to COVID-19 pandemic. After a formal announcement made on Mohanlal's 60th birthday,
+		 21 May 2020,[3] the principal photography began on 21 September and concluded on 6 November 2020, 
+		 while adhering to safety precautions set for preventing the spread of COVID-19. 
+		 The film was shot extensively for 46 days in and around Thodupuzha in the same locations as Drishyam,
+		  and some scenes in Kochi. Anil Johnson composed the songs and score. Satheesh Kurup handled the cinematography and V. S. Vinayak edited the film.
+	</p>
+</div>
+<section id="actor">
+	<h3>Actors</h3>
+	<ul>
+		<li>Ajay devgn</li>
+		<li>ishita dutta</li>
+		<li>shriya saran</li>
+		<li>akshaye khanna</li>
+		<li>abhishek pandey</li>
+		<li>gulshan</li>
+		<li>sunaina</li>
+	</ul>
+</section>
+<Section id="quote">
+	<h3>Quotes</h3>
+	<ul>
+		<li>you need to grow in the field</li>
+		<li>every bad day has a bright tomorrow</li>
+		<li>When you play the mindgames, you win or you die.</li>
+		<li>i m not a ladder,for you .</li>
+		<li>If you think this has a happy ending,you are wrong</li>
+	</ul>
+</Section>
+<aside>
+	<p>IMDB Rating : 8.5</p>
+	<p> Released Date : November 18, 2022</p>
+</aside>
+<footer>
+	Produced by: jeethu joseph 
+</footer>
 
 </body>
 
